--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -101,6 +101,23 @@
             android:textColor="@color/black"
             android:textStyle="bold"
     />
+    <FrameLayout
+            android:id="@+id/contentContainer"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@id/nameLabel2"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="@id/contentBackground"
+            app:layout_constraintEnd_toEndOf="@id/contentBackground"
+    >
+        <fragment
+                android:id="@+id/topLevelFragment"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:name="com.ruddell.resume.ui.TopLevelContentFragment"
+                tools:layout="@layout/fragment_top_level_content"
+        />
+    </FrameLayout>
 
 
 </android.support.constraint.ConstraintLayout>
