Added initial details page

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,15 +5,30 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity">
+        tools:context=".ui.MainActivity">
 
-    <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent">
+    <FrameLayout
+            android:id="@+id/fragmentContainer"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
         <fragment
                 android:id="@+id/homeFragment"
                 android:layout_width="match_parent" android:layout_height="match_parent"
-        android:name="com.ruddell.resume.ui.HomeFragment"
+                android:name="com.ruddell.resume.ui.HomeFragment"
                   tools:layout="@layout/fragment_home"
         />
+        <View
+                android:id="@+id/detailsBackground"
+                android:layout_width="match_parent"
+              android:layout_height="match_parent"
+                android:visibility="invisible"
+        />
+    </FrameLayout>
+    <FrameLayout
+            android:id="@+id/detailsFragmentContainer"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
     </FrameLayout>
 
 </android.support.constraint.ConstraintLayout>
