--- a/app/src/main/res/layout/fragment_top_level_content.xml
+++ b/app/src/main/res/layout/fragment_top_level_content.xml
@@ -33,7 +33,7 @@
           app:layout_constraintEnd_toEndOf="@id/verticalGuideline"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintBottom_toBottomOf="@id/horizontalGuideline"
-          android:background="@color/md_blue_100"
+          android:background="@color/workBackground"
           android:contentDescription="@string/education"
           android:layout_marginStart="16dp"
           android:layout_marginTop="16dp"
@@ -73,7 +73,7 @@
             app:layout_constraintStart_toEndOf="@id/verticalGuideline"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="@id/horizontalGuideline"
-            android:background="@color/md_red_400"
+            android:background="@color/educationBackground"
             android:contentDescription="@string/education"
             android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
@@ -113,7 +113,7 @@
             app:layout_constraintEnd_toEndOf="@id/verticalGuideline"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:background="@color/md_green_100"
+            android:background="@color/skillsBackground"
             android:contentDescription="@string/education"
             android:layout_marginStart="16dp"
             android:layout_marginBottom="16dp"
@@ -153,7 +153,7 @@
             app:layout_constraintStart_toEndOf="@id/verticalGuideline"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/horizontalGuideline"
-            android:background="@color/md_amber_300"
+            android:background="@color/aboutBackground"
             android:contentDescription="@string/education"
             android:layout_marginStart="8dp"
             android:layout_marginBottom="16dp"
