--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,10 @@
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
 
+    <color name="workBackground">@color/md_blue_100</color>
+    <color name="educationBackground">@color/md_red_400</color>
+    <color name="skillsBackground">@color/md_green_100</color>
+    <color name="aboutBackground">@color/md_amber_300</color>
 
     <!--
     google's material design colours from
