--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -1,15 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.RecyclerView
+<android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/list"
-        android:name="com.ruddell.resume.ui.details.DetailsFragment"
-        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        app:layoutManager="LinearLayoutManager"
-        tools:context=".ui.details.DetailsFragment"
-        tools:listitem="@layout/card_work_item"
-/>
+        android:layout_width="match_parent"
+        tools:background="@color/workBackground"
+    >
+    <ImageView
+            android:id="@+id/iconView"
+            android:layout_width="?actionBarSize"
+            android:layout_height="?actionBarSize"
+            tools:src="@drawable/work_icon"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="24dp"
+            android:contentDescription="@string/icon"
+    />
+    <TextView
+            android:id="@+id/titleView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="@id/iconView"
+            app:layout_constraintBottom_toBottomOf="@id/iconView"
+            app:layout_constraintStart_toEndOf="@id/iconView"
+            tools:text="Work Experience"
+            android:textColor="@color/black"
+            android:textSize="24sp"
+            android:layout_marginStart="8dp"
+    />
+    <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:name="com.ruddell.resume.ui.details.DetailsFragment"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            app:layoutManager="LinearLayoutManager"
+            app:layout_constraintTop_toBottomOf="@id/iconView"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:context=".ui.details.DetailsFragment"
+            tools:listitem="@layout/card_work_item"
+    />
+</android.support.constraint.ConstraintLayout>
