--- a/app/src/main/res/layout/card_about_item.xml
+++ b/app/src/main/res/layout/card_about_item.xml
@@ -7,13 +7,13 @@
              tools:background="@color/workBackground"
 >
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white"
             android:layout_margin="16dp"
     >
-        <android.support.constraint.ConstraintLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/constraintLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -37,7 +37,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginTop="7dp"
             />
-        </android.support.constraint.ConstraintLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 </FrameLayout>
