--- a/app/src/main/res/layout/card_education_item.xml
+++ b/app/src/main/res/layout/card_education_item.xml
@@ -7,13 +7,13 @@
              tools:background="@color/workBackground"
 >
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white"
             android:layout_margin="16dp"
     >
-        <android.support.constraint.ConstraintLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/constraintLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -69,7 +69,7 @@
                     app:layout_constraintTop_toBottomOf="@+id/dateView"
                     app:layout_constraintBottom_toTopOf="@+id/spacer"
                     android:visibility="visible"/>
-        </android.support.constraint.ConstraintLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 </FrameLayout>
