--- a/app/src/main/res/layout/card_skills_item.xml
+++ b/app/src/main/res/layout/card_skills_item.xml
@@ -7,7 +7,7 @@
              tools:background="@color/workBackground"
 >
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white"
@@ -15,5 +15,5 @@
     >
         <include layout="@layout/card_skills_item_collapsed"/>
 
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 </FrameLayout>
