--- a/app/src/main/res/layout/card_work_item_expanded.xml
+++ b/app/src/main/res/layout/card_work_item_expanded.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.constraint.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -68,4 +68,4 @@ and review and supervision of associate auditors.
 • Communicated recommendations to clients for improvement to accounting practices
 and business processes."
     />
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
